<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_category">

    <fragment
        android:id="@+id/nav_category"
        android:name="com.company.blumeserver.ui.category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_flower_list"
        android:name="com.company.blumeserver.ui.flower_list.FlowerListFragment"
        android:label="@string/menu_flower_list"
        tools:layout="@layout/fragment_flower_list">

    <action android:id="@+id/clearBackStack"
        app:launchSingleTop="true"
        app:popUpTo="@+id/nav_category"
        app:popUpToInclusive="true">

    </action>
</fragment>

    <fragment
        android:id="@+id/nav_order"
        android:name="com.company.blumeserver.ui.order.OrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_order" />
    <action android:id="@+id/clearBackStack"
        app:launchSingleTop="true"
        app:popUpTo="@+id/nav_category"
        app:popUpToInclusive="true">
    </action>

    <fragment
        android:id="@+id/nav_shipper"
        android:name="com.company.blumeserver.ui.shipper.ShipperFragment"
        android:label="@string/menu_shipper"
        tools:layout="@layout/fragment_shipper" >

        <action android:id="@+id/clearBackStack"
            app:launchSingleTop="true"
            app:popUpTo="@+id/nav_category"
            app:popUpToInclusive="true">

        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_best_deals"
        android:name="com.company.blumeserver.ui.best_deals.BestDealsFragment"
        android:label="@string/menu_best_deals"
        tools:layout="@layout/best_deals_fragment" >

        <action android:id="@+id/clearBackStack"
            app:launchSingleTop="true"
            app:popUpTo="@+id/nav_category"
            app:popUpToInclusive="true">

        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_most_popular"
        android:name="com.company.blumeserver.ui.most_popular.MostPopularFragment"
        android:label="@string/menu_most_popular"
        tools:layout="@layout/most_popular_fragment" >

        <action android:id="@+id/clearBackStack"
            app:launchSingleTop="true"
            app:popUpTo="@+id/nav_category"
            app:popUpToInclusive="true">

        </action>
    </fragment>

</navigation>